--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Chat Application<</title>
+    <title>Chat Application</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
 </head>
 <body>
     <h1>Welcome to the Chat App</h1>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        var socket = io();
+
+        socket.on('connect', () => {
+            console.log('Connected to server !');
+        });
+
+        socket.on('disconnect', () => {
+            console.log('Disconnected from server !');
+        });
+    </script>
 </body>
 </html>
