--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!Doctype <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -9,7 +9,13 @@
 <body>
     <h1>Welcome to the Chat App</h1>
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/index.js"></script>
+    <form id="message-form">
+        <input name="message" type="text" placeholder="type your message here...">
+        <button>Send</button>
+    </form>
+
+    <script language="JavaScript" type="text/javascript" src="/socket.io/socket.io.js"></script>
+    <script language="JavaScript" type="text/javascript" scr="./js/libs/jquery-3.3.1.min.js"></script>
+    <script language="JavaScript" type="text/javascript" src="/js/index.js"></script>
 </body>
 </html>
