--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
         <button>Send</button>
     </form>
 
-    <script language="JavaScript" type="text/javascript" src="/socket.io/socket.io.js"></script>
-    <script language="JavaScript" type="text/javascript" scr="./js/libs/jquery-3.3.1.min.js"></script>
-    <script language="JavaScript" type="text/javascript" src="/js/index.js"></script>
+    <script  src="/socket.io/socket.io.js"></script>
+    <script  src="./js/libs/jquery-3.3.1.min.js"></script>
+    <script  src="./js/index.js"></script>
 </body>
 </html>
